k8s/stream.yaml
apiVersion: v1
kind: Service
metadata:
  name: stream-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: stream
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: stream
  template:
    metadata:
      labels:
        component: stream
    spec:
      containers:
      - name: stream
        image: yeomko/groove-stream
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /hls
          name: nfs-vol
      volumes:
      - name : nfs-vol
        nfs:
          server: nfs-service.default.svc.cluster.local
          path: /
