k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
  - secretName: groov-space-tls
    hosts:
    - groov.space
  rules:
  - host: groov.space
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-cluster-ip-service
          servicePort: 80
      - path: /api
        backend:
          serviceName: api-cluster-ip-service
          servicePort: 8080
      - path: /upload
        backend:
          serviceName: fileupload-cluster-ip-service
          servicePort: 8100
      - path: /hls
        backend:
          serviceName: stream-cluster-ip-service
          servicePort: 80
